--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="basic">
                         <h1 style="color:rgb(5, 135, 221);font-size:40pt"> 謝沅甫</h1>
                         <hr\>
-                            <a href="tell:0983776628">
+                            <a href="tel:0983776628">
                                 <h2><i class="fas fa-phone"> 0983776628</i></h2>
                                 <a href="mailto:B05106052@ntu.edu.tw">
                                     <h2><i class="fas fa-envelope"> B05106052@ntu.edu.tw</i></h2>
